--- a/index.html
+++ b/index.html
@@ -13,12 +13,28 @@
     
 <body background="assets/images/Background X-wing.jpg">
     <br>
-    <h1 class="center">Triva Game!</h1>
+    <h1 class="center">Totally Trival Trivia!</h1>
     <br>
     <div id="timer">
-
     </div>
-
+    <br>
+    <div id="question">
+    </div>
+    <br>
+    <div id="startButton">
+    </div>
+    <br>
+    <div id="answerChoice1">
+    </div>
+    <br>
+    <div id="answerChoice2">
+    </div>
+    <br>
+    <div id="answerChoice3">
+    </div>
+    <br>
+    <div id="answerChoice4">
+    </div>
 
     <script src="assets/javascript/app.js"></script>
 </body>
