--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-    
-    
-<body background="assets/images/Background X-wing.jpg">
+
+<body>
+<!--<body background="assets/images/Background X-wing.jpg">-->
     <br>
     <h1 class="center">Totally Trival Trivia!</h1>
     <br>
@@ -19,22 +20,26 @@
     <br>
     <div id="question">
     </div>
-    <br>
-    <div id="startButton">
-    </div>
-    <br>
-    <div id="answerChoice1">
-    </div>
-    <br>
-    <div id="answerChoice2">
-    </div>
-    <br>
-    <div id="answerChoice3">
-    </div>
-    <br>
-    <div id="answerChoice4">
+    <div id=#buttons>
+        <br>
+        <div id="button1" class="button">Start!
+        </div>
+        <br>
+        <div id="button2" class="button">
+        </div>
+        <br>
+        <div id="button3" class="button">
+        </div>
+        <br>
+        <div id="button4" class="button">
+        </div>
+        <br>
+        <div id="button5" class="nextQuestion">
+        </div>
     </div>
 
+
+    <script src="assets/javascript/questions.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
 
