--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
     </div>
     <div id=#buttons>
         <br>
-        <div id="button1" class="button">Start!
+        <div id="button1" class="button" value="0" value=0>Start!
         </div>
         <br>
-        <div id="button2" class="button">
+        <div id="button2" class="button" value="1" value=1>
+        <br>
+        <div id="button3" class="button" value="2" value=2>
         </div>
         <br>
-        <div id="button3" class="button">
-        </div>
-        <br>
-        <div id="button4" class="button">
+        <div id="button4" class="button" value="3" value=3>
         </div>
         <br>
         <div id="button5" class="nextQuestion">
