--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
 <!--<body background="assets/images/Background X-wing.jpg">-->
     <br>
-    <h1 class="center">Totally Trival Trivia!</h1>
+    <h1 class="center">Trivia!</h1>
     <br>
     <div id="timer">
     </div>
     <br>
     <div id="question">
     </div>
-    <div id=#buttons>
-        <br>
+    <div id=buttons>
+        <!-- <br>
         <div id="button1" class="button" value="0" value=0>Start!
         </div>
         <br>
@@ -34,8 +34,12 @@
         </div>
         <br>
         <div id="button5" class="nextQuestion">
-        </div>
+        </div> -->
     </div>
+
+
+
+
 
 
     <script src="assets/javascript/questions.js"></script>
