--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <br>
     <div id="question">
     </div>
+    <br>
     <div id=buttons>
         <!-- <br>
         <div id="button1" class="button" value="0" value=0>Start!
@@ -36,7 +37,8 @@
         <div id="button5" class="nextQuestion">
         </div> -->
     </div>
-
+    <div id="playAgain">
+    </div>
 
 
 
