--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div id="question">
     </div>
     <br>
-    <div id=buttons>
+    <div id="correctAnswer">
+    </div>
+    <br>
+    <div id="buttonSection">
         <!-- <br>
         <div id="button1" class="button" value="0" value=0>Start!
         </div>
