--- a/index.html
+++ b/index.html
@@ -10,45 +10,27 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-<!--<body background="assets/images/Background X-wing.jpg">-->
-    <br>
-    <h1 class="center">Trivia!</h1>
-    <br>
-    <div id="timer"> 
-    </div>
-    <br>
-    <div id="question">
-    </div>
-    <br>
-    <div id="correctAnswer">
-    </div>
-    <br>
-    <div id="buttonSection">
-        <!-- <br>
-        <div id="button1" class="button" value="0" value=0>Start!
+<body background="assets/image/background.jpg">
+    <section>
+        <br>
+        <h1 class="center">Full Stack Trivia!</h1>
+        <br>
+        <div id="timer">
         </div>
         <br>
-        <div id="button2" class="button" value="1" value=1>
-        <br>
-        <div id="button3" class="button" value="2" value=2>
+        <div id="question">
         </div>
         <br>
-        <div id="button4" class="button" value="3" value=3>
+        <div id="correctAnswer">
         </div>
         <br>
-        <div id="button5" class="nextQuestion">
-        </div> -->
-    </div>
-    <div id="playAgain">
-    </div>
-
-
-
-
-
-    <script src="assets/javascript/questions.js"></script>
-    <script src="assets/javascript/app.js"></script>
+        <div id="buttonSection">
+        </div>
+        <div id="playAgain">
+        </div>
+        <script src="assets/javascript/questions.js"></script>
+        <script src="assets/javascript/app.js"></script>
+    </section>
 </body>
 
 </html>
