--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body background="assets/image/background.jpg">
+<body background="assets/images/background.jpg">
     <section>
         <br>
         <h1 class="center">Full Stack Trivia!</h1>
