--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div id="question">
         </div>
         <br>
-        <div id="correctAnswer">
+        <!--<div id="correctAnswer">
         </div>
-        <br>
+        <br>-->
         <div id="buttonSection">
         </div>
         <div id="playAgain">
